fixed alignment of first contact icon (a little hacky still)

--- a/less/index.less
+++ b/less/index.less
@@ -156,8 +156,13 @@ body {
 			.contact__social {
 				padding-bottom: 10px;
 			}
+			.fa-envelope {
+				display: inline;
+				padding-right: 8%;
+			}
+
 			.fas {
-				padding-right: 5%;
+				padding-right: 8%;
 			}
 			@media ( max-width: 500px ) {
 				margin-right: 0;
